# otus-hw10

./: .travis.yml  CMakeLists.txt
include/: AppTypes.h  aliases.h  bulk_to_file_writer.h  command_collector.h  console_printer.h  ibulk_updater.h  resulting_bulk_formatter.h
src/: bulk_to_file_writer.cpp  command_collector.cpp  console_printer.cpp  main.cpp
